Removed scrollbar for Chrome, Edge, Opera and fixed modal.

--- a/client/app/styles/routes/browser.scss
+++ b/client/app/styles/routes/browser.scss
@@ -1,11 +1,23 @@
-// WebKit and Blink browsers
+// Microsoft: removing scrollbar
+body {
+  -ms-overflow-style: none;
+}
+
+// Gecko browsers: selection color
+::-moz-selection {
+  background: $yellow;
+  color: white;
+}
+
+// WebKit and Blink browsers: selection color
 ::selection {
   background: $yellow;
   color: white;
 }
 
-// Gecko browsers
-::-moz-selection {
-  background: $yellow;
-  color: white;
+// WebKit: removing scrollbar
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
+
