--- a/client/app/styles/routes/classes.scss
+++ b/client/app/styles/routes/classes.scss
@@ -18,6 +18,10 @@
   color: $color-font-active !important;
 }
 
+.darker {
+  background-color: #eaeaeb;
+}
+
 .embedded-logo {
   float: right;
   max-height: 186px;
