--- a/client/app/styles/theme/bootstrap.scss
+++ b/client/app/styles/theme/bootstrap.scss
@@ -57,6 +57,12 @@
   }
 }
 
+.close {
+  &:focus {
+    outline: none;
+  }
+}
+
 .d-block {
   display: none !important;
 }
